# DjangoAdmin.JS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  test.yml
django_admin_js/: apps.py  tests_settings.py
django_admin_js/static/django_admin_js/js/: change_form_tabs.js  custom_select.js  datetime_converter.js  django_admin_js.js  drag_drop_selector.js  drag_drop_uploader.js  main.js  navigation.js  popup_hijacker.js  theme.js  toast.js
django_admin_js/templates/admin/: 404.html  500.html  actions.html  admin_styles.css  app_index.html  app_list.html  base.html  base_site.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_results.html  color_picker.html  color_theme_toggle.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  nav_sidebar.html  object_history.html  popup_response.html  search_form.html  submit_line.html
django_admin_js/templates/admin/edit_inline/: stacked.html  tabular.html
django_admin_js/templates/admin/includes/: aurora_bg.html  (+6 more)
django_admin_js/templates/registration/: logged_out.html
django_admin_js/templatetags/: admin_stats.py
docs/: index.css  index.html
example/demo/: settings.py  urls.py
example/management/: admin.py  models.py
example/management/migrations/: 0001_initial.py
example/store/: admin.py  models.py
example/store/migrations/: 0001_initial.py  0002_product_image.py  0003_orderitem_discount_orderitem_gift_message_and_more.py  0004_orderitem_estimated_delivery_orderitem_refunded_and_more.py
(+2 files in other folders)
